tests/valid/LogicalNot_Valid_2.whiley
public export method test():
    bool[] a = [false]
    assume !(a[0])