tests/invalid/Function_Invalid_5.whiley
function init() -> (int r):
    return 0

function init() -> (bool r):
    return false

method test():
    int[] xs = init()
